--- a/static/css/variables.css
+++ b/static/css/variables.css
@@ -1,7 +1,7 @@
 :root {
   /* COLORS */
-  --color-bg-body: #fafafa;
-  --color-bg-content: #ffffff;
+  --color-bg-body: #dedede;
+  --color-bg-content: #bcbcbc;
   --color-text-primary: #333333;
   --color-text-heading: #444444;
   --color-text-gray: #777;
